<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainid"
    android:background="@drawable/grade_list"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/felhasznalonev"
            android:transitionName="splash_img"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.365" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/jelszo"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
            app:layout_constraintVertical_bias="0.048" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:onClick="login"
            android:text="@string/belepes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintVertical_bias="0.052" />

        <!--android:background="@drawable/button_sing_in"-->

        <Button
            android:id="@+id/registButton"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:onClick="regist"
            android:text="@string/regisztracio"
            android:transitionName="splash_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/gButton"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_sing_in"
            android:drawableLeft="@drawable/google_logo"
            android:hapticFeedbackEnabled="false"
            android:onClick="registGoogle"
            android:text="@string/sing_in"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:theme="@style/GombSajat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registButton" />

        <!--<Button
            android:id="@+id/fbButton"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_sing_in"
            android:drawableLeft="@drawable/facebook_logo"
            android:hapticFeedbackEnabled="false"
            android:onClick="registFacebook"
            android:text="@string/sing_in"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:theme="@style/GombSajat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gButton"
            app:layout_constraintVertical_bias="0.0" />-->

        <Button
            android:id="@+id/infoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="info"
            android:text="@string/informacio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>