<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="372dp"
        android:layout_height="291dp"
        android:layout_marginTop="32dp"
        android:background="#F5F5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userNameEditTextHome"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/felhasznalonev"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/phoneEditTextHome"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/telefonszam"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressEditTextHome" />

            <EditText
                android:id="@+id/addressEditTextHome"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/cim2"
                android:inputType="textMultiLine|textPostalAddress"
                android:maxLines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameEditTextHome" />

            <EditText
                android:id="@+id/passwordOldEditTextHome"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="jelszó régi"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneEditTextHome" />

            <EditText
                android:id="@+id/passwordNewEditTextHome"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="jelszó új"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordOldEditTextHome" />

            <EditText
                android:id="@+id/passwordNewAgainEditTextHome"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="jelszó újból"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordNewEditTextHome" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="save"
        android:text="@string/mentes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="299dp"
        android:layout_height="129dp"
        android:layout_marginTop="419dp"
        android:ems="10"
        android:enabled="false"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:justificationMode="none"
        android:text="@string/rolunk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:onClick="map"
        android:text="@string/cim"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:onClick="call"
        android:text="@string/tel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

</androidx.constraintlayout.widget.ConstraintLayout>